[gd_scene load_steps=4 format=3 uid="uid://cr1f4ofbtxkpy"]

[ext_resource type="Script" uid="uid://bwdgymjdvapon" path="res://scripts/enemy.gd" id="1_cx775"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8tegq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7p1mj"]
radius = 19.026299

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_cx775")

[node name="ColorRect" type="ColorRect" parent="."]
color = Color(0.75458413, 0.72969925, 0.85465235, 1)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_8tegq")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_7p1mj")
debug_color = Color(0.8817264, 0.32290268, 0.26064122, 0.41960785)

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
