[gd_scene load_steps=5 format=3 uid="uid://dfaqc4wojcyu7"]

[ext_resource type="Texture2D" uid="uid://dtlk48e87g1r3" path="res://icon.svg" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://bwdgymjdvapon" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 26.0
height = 86.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7p1mj"]
radius = 126.01587

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.421875, 0.6875)
texture = ExtResource("1_7p1mj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="DetectBox" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectBox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_7p1mj")
debug_color = Color(0.72737527, 0.46121794, 0.3237562, 0.41960785)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
